--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "graphql": "^16.6.0",
     "next": "^13.4.1",
     "next-auth": "^4.18.6",
+    "prom-client": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
