--- a/nginx/templates/invman.dev.conf.template
+++ b/nginx/templates/invman.dev.conf.template
@@ -10,6 +10,10 @@ upstream auth_upstream {
   server ${AUTH_DOMAIN_INTERNAL}:${AUTH_PORT_INTERNAL};
 }
 
+upstream monitor_upstream {
+  server ${MONITOR_DOMAIN_INTERNAL}:${MONITOR_PORT_INTERNAL};
+}
+
 server {
     listen 80 default_server;
     listen [::]:80;
@@ -33,6 +37,17 @@ server {
 
     location / {
         proxy_pass http://app_upstream;
+    }
+}
+
+server {
+    listen 80;
+    listen [::]:80;
+
+    server_name ${MONITOR_DOMAIN};
+
+    location / {
+        proxy_pass http://monitor_upstream;
     }
 }
 
