--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -65,5 +65,6 @@
       community.docker.docker_compose:
         project_src: "{{ project_src }}"
         remove_orphans: yes
+        build: yes
         files: docker-compose-prod.yml
       register: output
