--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -10,13 +10,13 @@ services:
       - ./logs/nginx:/var/log/nginx/
     depends_on:
       app:
-        condition: service_started
+        condition: service_healthy
       auth:
-        condition: service_started
+        condition: service_healthy
       api:
-        condition: service_started
+        condition: service_healthy
       monitor:
-        condition: service_started
+        condition: service_healthy
     networks:
       - general-network
     ports:
@@ -35,6 +35,11 @@ services:
       MONITOR_DOMAIN: ${MONITOR_DOMAIN}
       MONITOR_DOMAIN_INTERNAL: monitor
       MONITOR_PORT_INTERNAL: 3000
+    healthcheck:
+      test: [ "CMD", "service", "nginx", "status" ]
+      interval: 10s
+      timeout: 3s
+      retries: 3
 
   nginx-metrics-exporter:
     container_name: nginx-metrics-exporter
@@ -64,6 +69,11 @@ services:
       NEXT_PUBLIC_API_URL: http://${API_DOMAIN}
       NEXTAUTH_URL: http://${APP_DOMAIN}/api/auth
       NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
+    healthcheck:
+      test: curl -f http://localhost:3000/api/health || exit 1
+      interval: 10s
+      timeout: 3s
+      retries: 3
 
   api:
     container_name: api
@@ -85,6 +95,11 @@ services:
       DATABASE_PASSWORD: ${SERVICE_POSTGRES_PASSWORD}
       DATABASE_PORT: ${SERVICE_POSTGRES_PORT}
       DATABASE_NAME: ${SERVICE_POSTGRES_DB}
+    healthcheck:
+      test: curl -f http://localhost:8080/health || exit 1
+      interval: 10s
+      timeout: 3s
+      retries: 3
 
   auth:
     container_name: auth
@@ -95,7 +110,7 @@ services:
       - ./auth/app:/app
     depends_on:
       auth-redis:
-        condition: service_started
+        condition: service_healthy
       auth-postgres:
         condition: service_healthy
     networks:
@@ -112,6 +127,11 @@ services:
       REDIS_HOST: auth-redis
       REDIS_PORT: ${AUTH_REDIS_PORT}
       REDIS_PASSWORD: ${AUTH_REDIS_PASSWORD}
+    healthcheck:
+      test: curl -f http://localhost:8080/health || exit 1
+      interval: 10s
+      timeout: 3s
+      retries: 3
 
   auth-redis:
     container_name: auth-redis
@@ -121,6 +141,11 @@ services:
       - auth_redis_data:/data
     networks:
       - general-network
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 10s
+      timeout: 3s
+      retries: 3
 
   auth-postgres:
     container_name: auth-postgres
@@ -134,7 +159,11 @@ services:
     networks:
       - general-network
     healthcheck:
-      test: ["CMD-SHELL", "sh -c 'pg_isready -U ${AUTH_POSTGRES_USER} -d ${AUTH_POSTGRES_DB}'"]
+      test:
+        [
+          "CMD-SHELL",
+          "sh -c 'pg_isready -U ${AUTH_POSTGRES_USER} -d ${AUTH_POSTGRES_DB}'"
+        ]
       interval: 10s
       timeout: 3s
       retries: 3
@@ -151,7 +180,11 @@ services:
     networks:
       - general-network
     healthcheck:
-      test: ["CMD-SHELL", "sh -c 'pg_isready -U ${SERVICE_POSTGRES_USER} -d ${SERVICE_POSTGRES_DB}'"]
+      test:
+        [
+          "CMD-SHELL",
+          "sh -c 'pg_isready -U ${SERVICE_POSTGRES_USER} -d ${SERVICE_POSTGRES_DB}'"
+        ]
       interval: 10s
       timeout: 3s
       retries: 3
@@ -167,7 +200,7 @@ services:
 
   monitor:
     container_name: monitor
-    build: 
+    build:
       context: ./monitor
       dockerfile: Dockerfile
     networks:
@@ -176,9 +209,15 @@ services:
       - monitor_data:/var/lib/grafana
     environment:
       GF_INSTALL_PLUGINS: redis-datasource
+    healthcheck:
+      test: curl -f http://localhost:3000 || exit 1
+      interval: 10s
+      timeout: 3s
+      retries: 3
 
 networks:
   general-network:
+
 
 volumes:
   auth_postgres_data:
