--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -122,7 +122,7 @@ services:
     environment:
       OAUTH_CLIENT_ID: ${OAUTH_CLIENT_ID}
       OAUTH_CLIENT_SECRET: ${OAUTH_CLIENT_SECRET}
-      API_ACCESS_TOKEN_SECRET: ${API_ACCESS_TOKEN_SECRET}
+      ACCESS_TOKEN_SECRET: ${API_ACCESS_TOKEN_SECRET}
       POSTGRES_HOST: auth-postgres
       POSTGRES_USER: ${AUTH_POSTGRES_USER}
       POSTGRES_PASSWORD: ${AUTH_POSTGRES_PASSWORD}
