--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "socket.io-client": "^4.7.1",
     "swr": "^2.1.5"
   },
   "devDependencies": {
