--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -189,6 +189,18 @@ services:
       timeout: 3s
       retries: 3
 
+  chat:
+    container_name: chat
+    build:
+      context: ./chat/app
+      dockerfile: dev.Dockerfile
+    volumes:
+      - ./chat/app:/app
+    networks:
+      - general-network
+    ports:
+      - 8081:8081
+
   prometheus:
     container_name: prometheus
     image: prom/prometheus
