--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -118,6 +118,7 @@ services:
     environment:
       OAUTH_CLIENT_ID: ${OAUTH_CLIENT_ID}
       OAUTH_CLIENT_SECRET: ${OAUTH_CLIENT_SECRET}
+      ACCESS_TOKEN_ISSUER: ${AUTH_DOMAIN}
       ACCESS_TOKEN_SECRET: ${API_ACCESS_TOKEN_SECRET}
       POSTGRES_HOST: auth-postgres
       POSTGRES_USER: ${AUTH_POSTGRES_USER}
