--- a/app/package.json
+++ b/app/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "compile": "graphql-codegen",
-    "watch": "graphql-codegen -w"
+    "generate": "graphql-codegen"
   },
   "dependencies": {
     "@apollo/client": "^3.7.14",
