--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -6,22 +6,14 @@ services:
     build:
       context: ./nginx
       dockerfile: prod.Dockerfile
+    restart: always
     volumes:
       - ./logs/nginx:/var/log/nginx/
-    depends_on:
-      app:
-        condition: service_healthy
-      auth:
-        condition: service_healthy
-      api:
-        condition: service_healthy
-      monitor:
-        condition: service_healthy
-    networks:
-      - general-network
     ports:
       - 80:80
       - 443:443
+    networks:
+      - general-network
     environment:
       DOMAIN: ${DOMAIN}
       APP_DOMAIN: ${APP_DOMAIN}
@@ -36,11 +28,26 @@ services:
       MONITOR_DOMAIN: ${MONITOR_DOMAIN}
       MONITOR_DOMAIN_INTERNAL: monitor
       MONITOR_PORT_INTERNAL: 3000
+    depends_on:
+      app:
+        condition: service_healthy
+      auth:
+        condition: service_healthy
+      api:
+        condition: service_healthy
+      monitor:
+        condition: service_healthy
     healthcheck:
       test: [ "CMD", "service", "nginx", "status" ]
       interval: 10s
       timeout: 3s
       retries: 3
+
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./nginx/conf:/etc/letsencrypt
+      - ./nginx/www:/var/www/certbot
 
   nginx-metrics-exporter:
     container_name: nginx-metrics-exporter
@@ -201,6 +208,38 @@ services:
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
+
+  # mail:
+  #   container_name: mail
+  #   image: ghcr.io/docker-mailserver/docker-mailserver:latest
+  #   # Provide the FQDN of your mail server here (Your DNS MX record should point to this value)
+  #   hostname: mail.invman.nl
+  #   # env_file: mailserver.env
+  #   # More information about the mail-server ports:
+  #   # https://docker-mailserver.github.io/docker-mailserver/latest/config/security/understanding-the-ports/
+  #   # To avoid conflicts with yaml base-60 float, DO NOT remove the quotation marks.
+  #   ports:
+  #     - 25:25 # SMTP  (explicit TLS => STARTTLS)
+  #     - 143:143 # IMAP4 (explicit TLS => STARTTLS)
+  #     - 465:465 # ESMTP (implicit TLS)
+  #     - 587:587 # ESMTP (explicit TLS => STARTTLS)
+  #     - 993:993 # IMAP4 (implicit TLS)
+  #   volumes:
+  #     - ./mail/data/:/var/mail/
+  #     - ./mail/state/:/var/mail-state/
+  #     - ./mail/config/:/tmp/docker-mailserver/
+  #     - ./logs/mail/:/var/log/mail/
+  #     # - /etc/localtime:/etc/localtime:ro
+  #   restart: always
+  #   stop_grace_period: 1m
+  #   command: setup email add user@invman.nl
+  #   # Uncomment if using `ENABLE_FAIL2BAN=1`:
+  #   # cap_add:
+  #   #   - NET_ADMIN
+  #   healthcheck:
+  #     test: "ss --listening --tcp | grep -P 'LISTEN.+:smtp' || exit 1"
+  #     timeout: 3s
+  #     retries: 0
 
   monitor:
     container_name: monitor
