--- a/nginx/templates/invman.prod.conf.template
+++ b/nginx/templates/invman.prod.conf.template
@@ -25,6 +25,10 @@ server {
 
     limit_req zone=ip burst=10 nodelay;
 
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
     location /nginx_status {
         allow 127.0.0.1;
         deny all;
@@ -43,7 +47,13 @@ server {
 
   server_name ${APP_DOMAIN};
 
-  include     ssl/ssl-params.conf;
+  # include     ssl/ssl-params.conf;
+
+  include /etc/letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+  ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
 
   limit_req zone=ip burst=10 nodelay;
 
@@ -88,7 +98,13 @@ server {
 
   server_name ${AUTH_DOMAIN};
 
-  include     ssl/ssl-params.conf;
+  # include     ssl/ssl-params.conf;
+
+  include /etc/letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+  ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
 
   limit_req zone=ip burst=10 nodelay;
 
@@ -103,7 +119,13 @@ server {
 
   server_name ${API_DOMAIN};
 
-  include     ssl/ssl-params.conf;
+  # include     ssl/ssl-params.conf;
+
+  include /etc/letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+  ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
 
   limit_req zone=ip burst=10 nodelay;
 
@@ -118,7 +140,13 @@ server {
 
   server_name ${MONITOR_DOMAIN};
 
-  include     ssl/ssl-params.conf;
+  # include     ssl/ssl-params.conf;
+
+  include /etc/letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+  ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
 
   proxy_set_header Host $http_host;
 
