--- a/nginx/certbot/Dockerfile
+++ b/nginx/certbot/Dockerfile
@@ -1,3 +1,15 @@
 FROM certbot/certbot
 
-RUN certbot --nginx
+RUN mkdir /var/www
+
+RUN mkdir /var/www/invman
+
+RUN certbot certonly --webroot \
+    -w /var/www/invman \
+    --staging \
+    --agree-tos \
+    -d invman.nl \
+    -d *.invman.nl \
+    --email freekieb7@hotmail.com \
+    --no-eff-email \
+    --force-renewal
