--- a/nginx/templates/invman.prod.conf.template
+++ b/nginx/templates/invman.prod.conf.template
@@ -25,10 +25,6 @@ server {
 
     limit_req zone=ip burst=10 nodelay;
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/invman;
-    }
-
     location /nginx_status {
         allow 127.0.0.1;
         deny all;
@@ -47,13 +43,7 @@ server {
 
   server_name ${APP_DOMAIN};
 
-  # include     ssl/ssl-params.conf;
-
-  include /etc/letsencrypt/options-ssl-nginx.conf;
-  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-  ssl_certificate /etc/letsencrypt/live/invman.nl/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/invman.nl/privkey.pem;
+  include     ssl/ssl-params.conf;
 
   limit_req zone=ip burst=10 nodelay;
 
@@ -98,13 +88,7 @@ server {
 
   server_name ${AUTH_DOMAIN};
 
-  # include     ssl/ssl-params.conf;
-
-  include /etc/letsencrypt/options-ssl-nginx.conf;
-  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-  ssl_certificate /etc/letsencrypt/live/invman.nl/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/invman.nl/privkey.pem;
+  include     ssl/ssl-params.conf;
 
   limit_req zone=ip burst=10 nodelay;
 
@@ -119,13 +103,7 @@ server {
 
   server_name ${API_DOMAIN};
 
-  # include     ssl/ssl-params.conf;
-
-  include /etc/letsencrypt/options-ssl-nginx.conf;
-  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-  ssl_certificate /etc/letsencrypt/live/invman.nl/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/invman.nl/privkey.pem;
+  include     ssl/ssl-params.conf;
 
   limit_req zone=ip burst=10 nodelay;
 
@@ -140,13 +118,7 @@ server {
 
   server_name ${MONITOR_DOMAIN};
 
-  # include     ssl/ssl-params.conf;
-
-  include /etc/letsencrypt/options-ssl-nginx.conf;
-  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-  ssl_certificate /etc/letsencrypt/live/invman.nl/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/invman.nl/privkey.pem;
+  include     ssl/ssl-params.conf;
 
   proxy_set_header Host $http_host;
 
