--- a/nginx/certs/ssl-params.conf
+++ b/nginx/certs/ssl-params.conf
@@ -1,5 +1,5 @@
-ssl_certificate /etc/nginx/ssl/invman.crt;
-ssl_certificate_key /etc/nginx/ssl/invman.key;
+ssl_certificate /etc/nginx/ssl/invman.nl.crt;
+ssl_certificate_key /etc/nginx/ssl/invman.nl.key;
 
 ssl_protocols TLSv1.2;
 ssl_prefer_server_ciphers on;
