--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -32,6 +32,9 @@ services:
       AUTH_DOMAIN: ${AUTH_DOMAIN}
       AUTH_DOMAIN_INTERNAL: auth
       AUTH_PORT_INTERNAL: 8080
+      CHAT_DOMAIN: ${CHAT_DOMAIN}
+      CHAT_DOMAIN_INTERNAL: chat
+      CHAT_PORT_INTERNAL: 8080
       MONITOR_DOMAIN: ${MONITOR_DOMAIN}
       MONITOR_DOMAIN_INTERNAL: monitor
       MONITOR_PORT_INTERNAL: 3000
@@ -201,8 +204,6 @@ services:
       - ./chat/app:/app
     networks:
       - general-network
-    ports:
-      - 8082:8081
 
   prometheus:
     container_name: prometheus
