--- a/nginx/templates/invman.prod.conf.template
+++ b/nginx/templates/invman.prod.conf.template
@@ -47,37 +47,30 @@ server {
 
   limit_req zone=ip burst=10 nodelay;
 
-  # gzip on;
-  # gzip_proxied any;
-  # gzip_comp_level 4;
-  # gzip_types text/css application/javascript image/svg+xml;
+  gzip on;
+  gzip_proxied any;
+  gzip_comp_level 4;
+  gzip_types text/css application/javascript image/svg+xml;
 
-  # proxy_http_version 1.1;
-  # proxy_set_header Upgrade $http_upgrade;
-  # proxy_set_header Connection 'upgrade';
-  # proxy_set_header Host $host;
-  # proxy_cache_bypass $http_upgrade;
+  proxy_http_version 1.1;
+  proxy_set_header Upgrade $http_upgrade;
+  proxy_set_header Connection 'upgrade';
+  proxy_set_header Host $host;
+  proxy_cache_bypass $http_upgrade;
 
-  # location /_next/static {
-    # proxy_cache STATIC;
-    # proxy_pass http://next-js_upstream;
+  location /_next/static {
+    proxy_cache STATIC;
+    proxy_pass http://next-js_upstream;
+  }
 
-    # # For testing cache - remove before deploying to production
-    # add_header X-Cache-Status $upstream_cache_status;
-  # }
-
-  # location /static {
-    # proxy_cache STATIC;
-    # proxy_ignore_headers Cache-Control;
-    # proxy_cache_valid 60m;
-    # proxy_pass http://next-js_upstream;
-
-    # # For testing cache - remove before deploying to production
-    # add_header X-Cache-Status $upstream_cache_status;
-  # }
+  location /static {
+    proxy_cache STATIC;
+    proxy_ignore_headers Cache-Control;
+    proxy_cache_valid 60m;
+    proxy_pass http://next-js_upstream;
+  }
 
   location / {
-    # limit_req zone=ip burst=12 delay=8;
     proxy_pass http://app_upstream;
   }
 }
