--- a/nginx/templates/invman.prod.conf.template
+++ b/nginx/templates/invman.prod.conf.template
@@ -60,14 +60,14 @@ server {
 
   location /_next/static {
     proxy_cache STATIC;
-    proxy_pass http://next-js_upstream;
+    proxy_pass http://app_upstream;
   }
 
   location /static {
     proxy_cache STATIC;
     proxy_ignore_headers Cache-Control;
     proxy_cache_valid 60m;
-    proxy_pass http://next-js_upstream;
+    proxy_pass http://app_upstream;
   }
 
   location / {
