--- a/nginx/templates/invman.prod.conf.template
+++ b/nginx/templates/invman.prod.conf.template
@@ -1,4 +1,4 @@
-# proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=STATIC:10m inactive=7d use_temp_path=off;
+proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=STATIC:10m inactive=7d use_temp_path=off;
 limit_req_zone $binary_remote_addr zone=ip:10m rate=5r/s;
 
 upstream app_upstream {
