--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -70,6 +70,7 @@ services:
       AUTH_CLIENT_SECRET: ${OAUTH_CLIENT_SECRET}
       NEXT_TELEMETRY_DISABLED: 1
       NEXT_PUBLIC_API_URL: http://${API_DOMAIN}
+      NEXT_PUBLIC_CHAT_URL: ws://${CHAT_DOMAIN}
       NEXTAUTH_URL: http://${APP_DOMAIN}/api/auth
       NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
     healthcheck:
