--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -80,6 +80,7 @@ services:
       AUTH_CLIENT_SECRET: ${OAUTH_CLIENT_SECRET}
       NEXT_TELEMETRY_DISABLED: 1
       NEXT_PUBLIC_API_URL: https://${API_DOMAIN}
+      NEXT_PUBLIC_CHAT_URL: wss://${CHAT_DOMAIN}
       NEXTAUTH_URL: https://${APP_DOMAIN}/api/auth
       NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
     healthcheck:
