--- a/nginx/templates/invman.prod.conf.template
+++ b/nginx/templates/invman.prod.conf.template
@@ -117,10 +117,13 @@ server {
 
   include     ssl/ssl-params.conf;
 
-  proxy_set_header Host $http_host;
-
   location / {
     proxy_pass http://chat_upstream;
+
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
+    proxy_set_header Host $host;
   }
 }
 
