--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -90,8 +90,6 @@ services:
     build:
       context: ./api
       dockerfile: prod.Dockerfile
-    volumes:
-      - ./api:/app
     networks:
       - general-network
     depends_on:
@@ -206,6 +204,8 @@ services:
       dockerfile: prod.Dockerfile
     networks:
       - general-network
+    environment:
+      AUTH_URL: https://${AUTH_DOMAIN}
 
   prometheus:
     container_name: prometheus
